Fix contrast on Blue team button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3127,7 +3127,7 @@ body.admin-bar .xlt-nav {
 
 .kb-club-bg {
     background: #64B5F6;
-    color: var(--theme-text-color);
+    color: #0A0A11;
     border-top: 1px solid var(--theme-grey-color);
     border-bottom: 1px solid var(--theme-grey-color);
     border-right: 1px solid var(--theme-grey-color);
